# -Internship_in_Lacite

CMake/example1/: CMakeLists.txt  Readme.txt  main.cpp
CMake/example2/: CMakeLists.txt  Calc.cpp  Calc.h  Readme.txt  main.cpp
CMake/example3/: CMakeLists.txt  Readme.txt
CMake/example3/lib/: CMakeLists.txt
CMake/example3/src/: CMakeLists.txt
Internship_1_Shidlowski_A_V/: Internship_1_Shidlowski_A_V.ncb  Internship_1_Shidlowski_A_V.sln
Internship_1_Shidlowski_A_V/Debug/: Internship_1_Shidlowski_A_V.ilk
Internship_1_Shidlowski_A_V/Internship_1_Shidlowski_A_V/: Internship_1_Shidlowski_A_V.cpp  Internship_1_Shidlowski_A_V.vcproj  ReadMe.txt  stdafx.cpp
Internship_1_Shidlowski_A_V/Internship_1_Shidlowski_A_V/Debug/: BuildLog.htm  Internship_1_Shidlowski_A_V.pch  mt.dep  vc90.idb
Internship_2_Shidlowski_A_V/: Internship_2_Shidlowski_A_V.ncb  Internship_2_Shidlowski_A_V.sln  Readme.txt
Internship_2_Shidlowski_A_V/Debug/: Internship_2_Shidlowski_A_V.ilk
Internship_2_Shidlowski_A_V/Internship_2_Shidlowski_A_V/: BD.txt  Internship_2_Shidlowski_A_V.cpp  Internship_2_Shidlowski_A_V.vcproj  ReadMe.txt  stdafx.cpp
Internship_2_Shidlowski_A_V/Internship_2_Shidlowski_A_V/Debug/: BuildLog.htm  Internship_2_Shidlowski_A_V.pch  mt.dep  vc90.idb
